--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,12 @@ repository               : "amizener64/amizener64.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile-2.png"
-  name             : "Your Sidebar Name"
+  avatar           : "profile.png"
+  name             : "Andrew Mizener"
   pronouns         : "he/him# example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "I'm a PhD candidate at UMass Amherst interested in extragalactic dust! Though my thesis work focuses primarily on dust attenuation curves, I'm also interest in luminous dusty galaxies at high redshift as well as dust's impact on SED fitting."
+  location         : "Amherst"
+  employer         : "UMass Amherst"
   uri              : # URL
   email            : "amizener@astro.umass.edu" 
 
