--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "amizener64/amizener64.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile-2.png"
   name             : "Andrew Mizener"
   pronouns         : # example: "she/her"  
   bio              : "I'm a PhD candidate at UMass Amherst interested in extragalactic dust! Though my thesis work focuses primarily on dust attenuation curves, I'm also interest in luminous dusty galaxies at high redshift as well as dust's impact on SED fitting"
