Update description in _config.yml
Shortened the description field in the config.

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default"
 title                    : "Andrew Mizener, Astronomer"
 title_separator          : "-"
 name                     : &name "Andrew Mizener"
-description              : &description "I'm a PhD candidate at UMass Amherst interested in extragalactic dust! Though my thesis work focuses primarily on dust attenuation curves, I'm also interested in luminous dusty galaxies at high redshift as well as the impact of dust on SED fitting."
+description              : &description "I'm a PhD candidate at UMass Amherst interested in extragalactic dust!"
 url                      : https://amizener64.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "amizener64/amizener64.github.io"
