Update bio in _config.yml
Shortened bio to focus on primary research interest.

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile-2.png"
   name             : "Andrew Mizener"
   pronouns         : "he/they"  
-  bio              : "I'm a PhD candidate at UMass Amherst interested in extragalactic dust! Though my thesis work focuses primarily on dust attenuation curves, I'm also interest in luminous dusty galaxies at high redshift as well as dust's impact on SED fitting"
+  bio              : "I'm a PhD candidate at UMass Amherst interested in extragalactic dust!"
   location         : "Earth"
   employer         : "UMass Amherst"
   uri              : # URL
